--- a/about.html
+++ b/about.html
@@ -3,10 +3,17 @@
     <title>A little about me.</title>
     <link rel="stylesheet" href="style.css">
   </head>
+ 
   <body>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Portfolio</a>
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
+    <main>
     <h1>I love to lead others! Being a part of a team is a great joy of mine. Seeing a project come to life is so rewarding</h1>
     <h2>Gaming</h2>
       <img src="https://tse3.mm.bing.net/th?id=OIP.uW8fjf0mFxX0fE3hO49PowHaEK&pid=Api&P=0&h=220" alt="Man holding rifle">
@@ -17,6 +24,7 @@
     <h2>Football</h2>
       <p>Football is the greatest sport on earth and you cannot convince me otherwise. I root for the Atlanta Falcons even tho I am a Chicago Native. My wife likes the bears so I will root for them if they are on TV.</p>
       <img src="https://tse3.mm.bing.net/th?id=OIP.l6E1JnaFbMtK9KsDGZD-JwHaEK&pid=Api&P=0&h=220" alt="Football">
+    </main>
      
   </body>
 </html>
