--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
     <title>My Personal Website</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Portfolio</a>
 
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
+  <main>
     <h1>Software developer</h1>
     <p>My goal is to set out and be the best developer in the world, I want to bring change to the industry and this is my passion</p>
     <img src="https://up.yimg.com/ib/th?id=OIP._VYtG-zoDbSKCFFolfNCIQHaFj&pid=Api&rs=1&c=1&qlt=95&w=162&h=121"  alt="Anakin" class="center">
     <h2>"You miss 100% of the shots you don't take" - Wayne Gretzky - Michael Scott</h2>
+  </main>
   </body>
 </html>
