--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,16 @@
     <title>My portfolio</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Portfolio</a>
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    <main>
     <h1>My Projects</h1>
     <h2>My First Project</h2>
     <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Mus porta magnis metus lobortis sodales class. Tristique tempus ultrices magna imperdiet ultricies, hac semper integer enim. Per diam curae morbi lacus porta velit. Vulputate sed magna ornare enim aliquam suscipit. Porta fermentum etiam eleifend curae lorem ligula. Etiam facilisi faucibus magna suspendisse in hac. Molestie duis ultrices bibendum facilisi magna.
@@ -14,5 +20,6 @@
       Mus eros dictum bibendum praesent libero leo aliquet. Ante dictumst habitasse maximus sapien ultrices sed. Venenatis dignissim at et curabitur nullam arcu vehicula fusce. Hac laoreet ut hendrerit curae et facilisi habitant lobortis. Non dis ipsum pretium mollis id dignissim cursus. Egestas etiam himenaeos est amet, convallis efficitur ad. Platea tincidunt tempor risus dolor convallis eget etiam.</p>
       <img src="https://up.yimg.com/ib/th?id=OIP.PFGtcrdmk11ndWME8KSHsAHaEK&pid=Api&rs=1&c=1&qlt=95&w=200&h=112" alt="Jedi">
       <a href="file:///C:/Users/smits/DocumentsCS/Coursework/personal-website-part-one/index.html"target="_blank">My first project</a>
+    </main>
   </body>
 </html>
